Finalized website functionality and styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .bg {
+  background-image: url('./components/media/bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
