--- a/src/components/CodeforChange.css
+++ b/src/components/CodeforChange.css
@@ -2,8 +2,9 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-    height: 50%;
+    max-width: 80vw; 
+    max-height: 80vh; 
+    
 }
 
 .C4C-text{
